<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TransitionsAndroidL</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello World</string>
    <string name="bye_world">Bye World</string>

    <string name="short_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod</string>
    <string name="mid_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nis</string>
    <string name="long_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>

    <!-- Transition Name -->
    <string name="hero_image">hero_image</string>
    <string name="tool_bar">tool_bar</string>
    <string name="reveal_cover">reveal_cover</string>
    <string name="slide_up_panel">slide_up_panel</string>
    <string name="slide_down_panel">slide_down_panel</string>
    <string name="band_name_panel">band_name_panel</string>
    <string name="band_album_panel">band_album_panel</string>
    <string name="list_item">list_item</string>
    <string name="list_details">list_details</string>

</resources>
